# big-data-rendu

./: README.md  churn_model.joblib  dashboard.py  docker-compose.yml  main.py  ml_customer_churn.py  ml_predictions.csv  ml_report.json  pyproject.toml
api/: main.py
data/: benchmark_refresh_results.json  benchmark_results.json  clients.csv  purchases.csv
flows/: benchmark.py  benchmark_refresh.py  bronze_ingestion.py  config.py  etl_mongo.py  gold_aggregation.py  run_pipeline.py  silver_transformation.py  spark_gold_aggregation.py  spark_silver_transformation.py
script/: generate_data.py
