[project]
name = "cours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.2",
    "joblib>=1.3.0",
    "minio>=7.2.20",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "prefect>=3.6.11",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",
]
