[project]
name = "cours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.1.2",
    "joblib>=1.3.0",
    "minio>=7.2.20",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "prefect>=3.6.11",
    "pyspark>=4.1.1",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",
    "pymongo>=4.6.1",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
]
